Fixed CORS for Vercel, added DataInitializer for DB seeding, and resolved recursive serialization errors